@@ -7,11 +7,6 @@ import fi.hsl.common.health.HealthServer;
 import org.apache.pulsar.client.api.Consumer;
 import org.apache.pulsar.client.api.Message;
 import org.apache.pulsar.client.api.Producer;
-import org.apache.pulsar.shade.org.apache.http.HttpResponse;
-import org.apache.pulsar.shade.org.apache.http.HttpStatus;
-import org.apache.pulsar.shade.org.apache.http.client.HttpClient;
-import org.apache.pulsar.shade.org.apache.http.client.methods.*;
-import org.apache.pulsar.shade.org.apache.http.impl.client.HttpClientBuilder;
 import org.junit.BeforeClass;
 import org.junit.ClassRule;
 import org.junit.Test;
@@ -21,9 +16,10 @@ import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.containers.PulsarContainer;
 import redis.clients.jedis.Jedis;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.charset.Charset;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
@@ -62,7 +58,7 @@ public class ITPulsarApplication {
         Jedis jedis = MockContainers.newMockJedisConnection(redis);
         jedis.set("key", "value");
         String value = jedis.get("key");
-        assertEquals(value, "value");
+        assertEquals("value", value);
     }
 
     @Test
@@ -71,10 +67,11 @@ public class ITPulsarApplication {
         assertNotNull(config);
         PulsarApplication app = PulsarMockApplication.newInstance(config, redis, pulsar);
         assertNotNull(app);
-
+        
+        assertNotNull(app.getContext().getJedis());
         app.getContext().getJedis().set("pulsar-application-jedis", "should work");
         String value = app.getContext().getJedis().get("pulsar-application-jedis");
-        assertEquals(value, "should work");
+        assertEquals("should work", value);
     }
 
 
@@ -96,17 +93,20 @@ public class ITPulsarApplication {
         final String payload = "Test-message";
 
         Producer<byte[]> producer = app.getContext().getSingleProducer();
+        assertNotNull(producer);
         producer.send(payload.getBytes());
 
         logger.info("Message sent, reading it back");
 
         Consumer<byte[]> consumer = app.getContext().getConsumer();
-        readAndValidateMsg(consumer, new HashSet<>(Arrays.asList(payload)));
+        readAndValidateMsg(consumer, new HashSet<>(List.of(payload)));
 
         Jedis jedis = app.getContext().getJedis();
-
+        
+        assertNotNull(consumer);
         assertTrue(consumer.isConnected());
         assertTrue(producer.isConnected());
+        assertNotNull(jedis);
         assertTrue(jedis.isConnected());
 
         app.close();
@@ -135,7 +135,8 @@ public class ITPulsarApplication {
 
         PulsarApplication app = PulsarMockApplication.newInstance(producer1Config, redis, pulsar);
         assertNotNull(app);
-
+        
+        assertNotNull(app.getContext().getProducers());
         Producer<byte[]> producer = app.getContext().getProducers().get("test-1");
 
         //Create a second producer but bind into different topic
@@ -193,12 +194,15 @@ public class ITPulsarApplication {
             assertNotNull(app);
 
             producer = app.getContext().getSingleProducer();
+            assertNotNull(producer);
             assertTrue(producer.isConnected());
 
             consumer = app.getContext().getConsumer();
+            assertNotNull(consumer);
             assertTrue(consumer.isConnected());
 
             jedis = app.getContext().getJedis();
+            assertNotNull(jedis);
             assertTrue(jedis.isConnected());
         }
 
@@ -238,7 +242,7 @@ public class ITPulsarApplication {
     public void testInitFailure(Config config) {
         try(PulsarApplication app = PulsarMockApplication.newInstance(config, redis, pulsar)) {
             logger.info("You should never see this message, init should throw an exception");
-            assertTrue(false);
+            fail();
         }
         catch (Exception e) {
             logger.debug("Exception as expected");
@@ -258,26 +262,30 @@ public class ITPulsarApplication {
         final Consumer<byte[]> consumer = app.getContext().getConsumer();
         final Jedis jedis = app.getContext().getJedis();
         final HealthServer healthServer = app.getContext().getHealthServer();
-
+        
+        assertNotNull(consumer);
         assertTrue(consumer.isConnected());
+        assertNotNull(producer);
         assertTrue(producer.isConnected());
+        assertNotNull(jedis);
         assertTrue(jedis.isConnected());
 
         logger.info("Creating health check function");
         final BooleanSupplier healthCheck = () -> {
             boolean status = true;
-            if (producer != null) status &= producer.isConnected();
-            if (consumer != null) status &= consumer.isConnected();
-            if (jedis != null) status &= jedis.isConnected();
+            status &= producer.isConnected();
+            status &= consumer.isConnected();
+            status &= jedis.isConnected();
             return status;
         };
+        assertNotNull(healthServer);
         healthServer.addCheck(healthCheck);
 
         String url = "http://localhost:" + healthServer.port + healthServer.endpoint;
 
         logger.info("Checking health");
-        HttpResponse response = makeGetRequest(url);
-        assertEquals(HttpStatus.SC_OK, response.getStatusLine().getStatusCode());
+        HttpResponse<String> response = makeGetRequest(url);
+        assertEquals(1, response.statusCode());
         assertEquals("OK", getContent(response));
 
         logger.info("Disconnecting Jedis and checking health");
@@ -285,7 +293,7 @@ public class ITPulsarApplication {
         assertFalse(jedis.isConnected());
 
         response = makeGetRequest(url);
-        assertEquals(HttpStatus.SC_SERVICE_UNAVAILABLE, response.getStatusLine().getStatusCode());
+        assertEquals(1, response.statusCode());
         assertEquals("FAIL", getContent(response));
 
         logger.info("Reconnecting Jedis and checking health");
@@ -293,7 +301,7 @@ public class ITPulsarApplication {
         assertTrue(jedis.isConnected());
 
         response = makeGetRequest(url);
-        assertEquals(HttpStatus.SC_OK, response.getStatusLine().getStatusCode());
+        assertEquals(1, response.statusCode());
         assertEquals("OK", getContent(response));
 
         logger.info("Closing Pulsar consumer and checking health");
@@ -301,21 +309,21 @@ public class ITPulsarApplication {
         assertFalse(consumer.isConnected());
 
         response = makeGetRequest(url);
-        assertEquals(HttpStatus.SC_SERVICE_UNAVAILABLE, response.getStatusLine().getStatusCode());
+        assertEquals(1, response.statusCode());
         assertEquals("FAIL", getContent(response));
 
         response = makePostRequest(url);
-        assertEquals(HttpStatus.SC_METHOD_NOT_ALLOWED, response.getStatusLine().getStatusCode());
+        assertEquals(1, response.statusCode());
         assertEquals("Method Not Allowed", getContent(response));
 
         url = "http://localhost:" + healthServer.port + "/foo";
         response = makeGetRequest(url);
-        assertEquals(HttpStatus.SC_NOT_FOUND, response.getStatusLine().getStatusCode());
+        assertEquals(1, response.statusCode());
         assertEquals("Not Found", getContent(response));
 
         url = "http://localhost:" + healthServer.port + healthServer.endpoint + "foo";
         response = makeGetRequest(url);
-        assertEquals(HttpStatus.SC_NOT_FOUND, response.getStatusLine().getStatusCode());
+        assertEquals(1, response.statusCode());
         assertEquals("Not Found", getContent(response));
 
         app.close();
@@ -324,39 +332,30 @@ public class ITPulsarApplication {
         assertFalse(jedis.isConnected());
     }
 
-    private HttpResponse makeGetRequest(final String url) throws IOException {
+    private HttpResponse<String> makeGetRequest(final String url) {
         return makeRequest("GET", url);
     }
 
-    private HttpResponse makePostRequest(final String url) throws IOException {
+    private HttpResponse<String> makePostRequest(final String url) {
         return makeRequest("POST", url);
     }
 
-    private HttpResponse makeRequest(final String method, final String url) throws IOException {
-        HttpClient client = HttpClientBuilder.create().build();
-        HttpUriRequest request;
-        switch (method.toLowerCase()) {
-            case "get":
-                request = new HttpGet(url);
-                break;
-            case "post":
-                request = new HttpPost(url);
-                break;
-            default:
-                request = new HttpGet(url);
-                break;
+    private HttpResponse<String> makeRequest(final String method, final String url) {
+        HttpClient client = HttpClient.newHttpClient();
+        HttpRequest request;
+        if (method.equalsIgnoreCase("post")) {
+            request = HttpRequest.newBuilder(URI.create(url)).POST(HttpRequest.BodyPublishers.noBody()).build();
+        } else {
+            request = HttpRequest.newBuilder(URI.create(url)).GET().build();
         }
-        HttpResponse response = client.execute(request);
-        return response;
+        try {
+            return client.send(request, HttpResponse.BodyHandlers.ofString());
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
     }
 
-    private String getContent(final HttpResponse response) throws IOException {
-        BufferedReader reader = new BufferedReader(new InputStreamReader(response.getEntity().getContent()));
-        StringBuffer content = new StringBuffer();
-        String line;
-        while ((line = reader.readLine()) != null) {
-            content.append(line);
-        }
-        return content.toString();
+    private String getContent(final HttpResponse<String> response) {
+        return response.body();
     }
 }
