@@ -1,7 +1,6 @@
 package fi.hsl.common.pulsar;
 
 import org.apache.pulsar.client.admin.PulsarAdmin;
-import org.apache.pulsar.client.api.PulsarClient;
 import org.apache.pulsar.common.policies.data.TenantInfo;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -10,8 +9,8 @@ import org.testcontainers.containers.PulsarContainer;
 import org.testcontainers.containers.output.Slf4jLogConsumer;
 import redis.clients.jedis.Jedis;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 public class MockContainers {
@@ -50,21 +49,16 @@ public class MockContainers {
                 .serviceHttpUrl(pulsar.getHttpServiceUrl())
                 .build();
 
-        TenantInfo info = new TenantInfo();
-        Set<String> clusters = new HashSet<>(Arrays.asList("standalone"));
-        info.setAllowedClusters(clusters);
-        info.setAdminRoles(new HashSet<>(Arrays.asList("all")));
+        Set<String> clusters = new HashSet<>(List.of("standalone"));
+        TenantInfo info = TenantInfo.builder()
+                .allowedClusters(clusters)
+                .adminRoles(new HashSet<>(List.of("all")))
+                .build();
         admin.tenants().createTenant(tenant, info);
 
         admin.namespaces().createNamespace(tenant + "/" + namespace, clusters);
         logger.info("Pulsar setup done");
         return pulsar;
-    }
-
-    public static PulsarClient newMockPulsarClient(PulsarContainer pulsar) throws Exception {
-        return PulsarClient.builder()
-                .serviceUrl(pulsar.getPulsarBrokerUrl())
-                .build();
     }
 
     public static void tail(GenericContainer container, Logger logger) {
